Bug 282113 - KCatalogLoader error while building vkontake
Summary: KCatalogLoader error while building vkontake
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Vkontakte (other bugs)
Version First Reported In: 1.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-16 00:34 UTC by tuxrules.in
Modified: 2020-07-15 06:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tuxrules.in 2011-09-16 00:34:10 UTC
Version:           2.1.1 (using KDE 4.5.5) 
OS:                Linux

I am using Slackware 13.37 x86_64 and trying to build latest digikam version 2.1.1 but the build fails with the following error.

/tmp/SBo/digikam-2.1.1/extra/libkvkontakte/libkvkontakte/util.cpp:24:14: error: 'KCatalogLoader' does not name a type
make[2]: *** [extra/libkvkontakte/libkvkontakte/CMakeFiles/kvkontakte.dir/util.cpp.o] Error 1
make[1]: *** [extra/libkvkontakte/libkvkontakte/CMakeFiles/kvkontakte.dir/all] Error 2
make: *** [all] Error 2

I had the same issue with version 2.1.0 and thought I would give 2.1.1 a try to see if the bug was fixed.  I googled and search the bugzilla but couldn't find any similar bugs.

BTW, I built and install version 2.0.0 which works fine.  Here are my build options

cmake \
    -DCMAKE_C_FLAGS_RELEASE:STRING="-O2 -fPIC" \
    -DCMAKE_CXX_FLAGS_RELEASE:STRING="-O2 -fPIC" \
    -DCMAKE_INSTALL_PREFIX=/usr \
    -DLIB_SUFFIX=$(kde4-config --libsuffix) \
    -DMAN_INSTALL_DIR=/usr/man \
    -DSYSCONF_INSTALL_DIR=/etc/kde \
    -DCMAKE_BUILD_TYPE=Release ..


Reproducible: Always

Steps to Reproduce:
Trying to build it on a slackware 13.37 x86_64 machine


Expected Results:  
It should have built cleanly
Comment 1 Alexander Potashev 2011-09-16 01:03:51 UTC
KCatalogLoader was introduced in kdelibs-4.6.2.

@Gilles Caulier: should I get rid of KCatalogLoader or let's say we need at least kdelibs-4.6.2?
Comment 2 caulier.gilles 2011-09-16 03:59:26 UTC
Why not to wrap this class to check KDE version with pre-processor ?

Like this you can provide a code to replace KCatalogLoader with old KDE version, or disable some feature in this case. But at least code will be compilable...

Gilles Caulier
Comment 3 Alexander Potashev 2011-09-16 10:40:24 UTC
(In reply to comment #2)
> Why not to wrap this class to check KDE version with pre-processor ?

I thought about that, but we'll lose translations then. Will do this.

> Like this you can provide a code to replace KCatalogLoader with old KDE
> version, or disable some feature in this case. But at least code will be
> compilable...

Don't know how to replace it easily in a library.
Comment 4 Alexander Potashev 2011-09-16 10:49:20 UTC
Git commit c2a0b9edc3f54af10a1df62d47c9ed66fec1fa0f by Alexander Potashev.
Committed on 16/09/2011 at 12:49.
Pushed by aspotashev into branch 'master'.

Disable KCatalogLoader for kdelibs below 4.6.2

BUG:282113

M  +4    -1    libkvkontakte/util.cpp

http://commits.kde.org/libkvkontakte/c2a0b9edc3f54af10a1df62d47c9ed66fec1fa0f