Disable KCatalogLoader for kdelibs below 4.6.2

BUG:282113